add styles to index.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -7,6 +7,17 @@
     <link href="assests/css/bootstrap.min.css" rel="stylesheet">
     <link href="assests/style.css" rel="stylesheet">
 
+    <!-----------------------------fonts-------------------------------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
+    <!------------------------------------------------------------------->
+
+
     <style>
         body {
             height: 100vh;
@@ -19,14 +30,18 @@
 
 <main class="container-fluid">
     <section class="row" style="height: 729px">
-        <div id="loginImage" class="col-7 bg-black">
-
-        </div>
+        <div id="loginImage" class="col-7 bg-black"></div>
 
         <div class="col-5 bg-danger">
+            <div class="row bg-light ms-5 mt-5" style="height: 640px;width: 530px; border-radius: 18px">
+                <div class="col-12 " style="height:150px;">
+                    <label class="col-12 text-center mt-3 fs-2" style="height: max-content;font-family: 'Convergence', sans-serif;">Welcome to the</label>
+                    <label class="col-12 text-center fs-1" style="height: max-content;font-family: 'Convergence', sans-serif;">Easy Car Rental PVT(Ltd)</label>
+                </div>
+            </div>
         </div>
     </section>
-    
+
 </main>
 
 <script src="assests/js/bootstrap.min.js"></script>
