design login form in index.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -34,10 +34,32 @@
 
         <div class="col-5 bg-danger">
             <div class="row bg-light ms-5 mt-5" style="height: 640px;width: 530px; border-radius: 18px">
-                <div class="col-12 " style="height:150px;">
+                <div class="col-12 mt-3 " style="height:150px;">
                     <label class="col-12 text-center mt-3 fs-2" style="height: max-content;font-family: 'Convergence', sans-serif;">Welcome to the</label>
                     <label class="col-12 text-center fs-1" style="height: max-content;font-family: 'Convergence', sans-serif;">Easy Car Rental PVT(Ltd)</label>
                 </div>
+                <div class="col mb-3" style="height: 430px">
+                    <label class="fs-4 ms-2 mt-4" style="font-family: 'Convergence', sans-serif; text-decoration: underline;">Login</label>
+                    <form class="ms-2 mt-5 me-2">
+                        <div class="mb-3">
+                            <label for="inputUsername" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="inputUsername" >
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputPassword" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="inputPassword">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="check">
+                            <label class="form-check-label" for="check">Show Password</label>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 "></div>
+                            <button type="button" class="btn col-4 btn-dark ms-4">LogIn</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
     </section>
