--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -23,6 +23,13 @@
             height: 100vh;
             width: 100vw;
         }
+
+        #loginImage{
+            background-image: url("assests/images/login_pg.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+
     </style>
 
 </head>
@@ -30,9 +37,9 @@
 
 <main class="container-fluid">
     <section class="row" style="height: 729px">
-        <div id="loginImage" class="col-7 bg-black"></div>
+        <div id="loginImage" class="col-7"></div>
 
-        <div class="col-5 bg-danger">
+        <div class="col-5 bg-black">
             <div class="row bg-light ms-5 mt-5" style="height: 640px;width: 530px; border-radius: 18px">
                 <div class="col-12 mt-3 " style="height:150px;">
                     <label class="col-12 text-center mt-3 fs-2" style="height: max-content;font-family: 'Convergence', sans-serif;">Welcome to the</label>
@@ -55,7 +62,7 @@
                         </div>
                         <div class="row">
                             <div class="col-6 "></div>
-                            <button type="button" class="btn col-4 btn-dark ms-4">LogIn</button>
+                            <button type="button" class="btn fs-5 col-4 btn-dark ms-4">LogIn</button>
                         </div>
                     </form>
                 </div>
