--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -19,10 +19,6 @@
 
 
     <style>
-        body {
-            height: 100vh;
-            width: 100vw;
-        }
 
         #loginImage{
             background-image: url("assests/images/login_pg.jpg");
@@ -65,6 +61,8 @@
                             <button type="button" class="btn fs-5 col-4 btn-dark ms-4">LogIn</button>
                         </div>
                     </form>
+                    <label class="ms-2 mt-4" style="font-family: 'Convergence', sans-serif;">Don't have an account?</label>
+                    <a class="navbar-brand fw-bold" href="signUp.html">SignUp</a>
                 </div>
 
             </div>
@@ -75,6 +73,6 @@
 
 <script src="assests/js/bootstrap.min.js"></script>
 <script src="assests/JQuery/jquery-3.6.1.min.js"></script>
-<script></script>
+
 </body>
 </html>
