design signUp.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/signUp.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/signUp.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Car Rental System</title>
-  <meta content="width=device-width initial-scale=1" name="viewport">
-  <link href="assests/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assests/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Car Rental System</title>
+    <meta content="width=device-width initial-scale=1" name="viewport">
+    <link href="assests/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assests/style.css" rel="stylesheet">
 
-  <!-----------------------------fonts-------------------------------------->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <!-----------------------------fonts-------------------------------------->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
-  <!------------------------------------------------------------------->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
+    <!------------------------------------------------------------------->
+    <style>
+        #loginImage {
+            background-image: url("assests/images/signUp_pg.jpg");
+            background-position: center;
+            background-size: cover;
+        }
+
+    </style>
 </head>
 <body>
 
 <main class="container-fluid">
+    <section class="row bg-warning" style="height: 729px">
+        <div class="col-8 bg-primary">
+
+        </div>
+
+        <div class="col-4 bg-info" id="loginImage">
+
+        </div>
+    </section>
 
 </main>
 
