create form,design the signUp.html file and connect to the index.html(login) in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -37,7 +37,7 @@
 
         <div class="col-5 bg-black">
             <div class="row bg-light ms-5 mt-5" style="height: 640px;width: 530px; border-radius: 18px">
-                <div class="col-12 mt-4 " style="height:145px;background-color: #ffc41f">
+                <div class="col-12 mt-4 " style="height:145px;">
                     <label class="col-12 text-center mt-3 fs-2"
                            style="height: max-content;font-family: 'Convergence', sans-serif;">Welcome to the</label>
                     <label class="col-12 text-center fs-1"
@@ -78,7 +78,6 @@
                         account?</label>
                     <a class="navbar-brand fw-bold" href="signUp.html">SignUp</a>
                 </div>
-
             </div>
         </div>
     </section>
