design body in useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
@@ -15,6 +15,10 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
   <!------------------------------------------------------------------->
 
 </head>
@@ -49,7 +53,44 @@
   </nav>
 </header>
 
-<main></main>
+<main class="container-fluid">
+  <div class="row jumbotron jumbotron-fluid text-center bg-primary align-items-center" style="height: 175px">
+    <div class="col-12">
+      <h1 class="display-4" style="font-family: 'PT Sans', sans-serif;">Welcome to Car Rental System</h1>
+      <p class="lead">Rent a car that fits your needs and budget with ease</p>
+    </div>
+
+  </div>
+  <div class="container">
+    <h2 class="text-center mt-4 mb-4">Our Fleet</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="" class="card-img-top" alt="..."/>
+          <div class="card-body">
+            General Cars
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="" class="card-img-top" alt="..."/>
+          <div class="card-body">
+            Premium Cars
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="" class="card-img-top" alt="..."/>
+          <div class="card-body">
+            Luxury Cars
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 
 
 <script src="assests/js/bootstrap.min.js"></script>
