--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
@@ -64,11 +64,87 @@
       </button>
     </div>
 
-
-
   </nav>
   <!---------------------user acc offcanvas----------------------->
   <div  class=" myf offcanvas offcanvas-end " tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" >
+    <div class="col-12 mt-2 " style="height:30px;">
+      <label class="col-7 ms-2 fs-4" style="height: max-content;font-family: 'Convergence', sans-serif;text-decoration: underline;">User Profile</label>
+      <label class="col-4 ms-2 fs-5 text-end" style="height: max-content;">U001</label>
+    </div>
+    <div class="row justify-content-center" style="height: 100px">
+      <div class="col-3 align-self-center">
+        <img src="assests/images/profile-user.png "  width="80px" height="80px">
+      </div>
+    </div>
+    <form class="row g-1 gx-2 ms-2 me-2 fs-6">
+      <div class="col-md-6">
+        <label class="form-label" for="inputName">Name</label>
+        <input class="form-control" id="inputName" type="text">
+      </div>
+      <div class="col-md-6">
+        <label class="form-label" for="inputAddress">Address</label>
+        <input class="form-control" id="inputAddress" type="text">
+      </div>
+      <div class="col-md-6">
+        <label class="form-label" for="inputContact">Contact No</label>
+        <input class="form-control" id="inputContact" type="tel">
+      </div>
+      <div class="col-md-6">
+        <label for="inputEmail" class="form-label">Email</label>
+        <input type="email" class="form-control" id="inputEmail">
+      </div>
+      <div class="col-md-6">
+        <label for="inputNIC" class="form-label">NIC</label>
+        <input type="text" class="form-control" id="inputNIC">
+      </div>
+      <div class="col-md-6">
+        <label for="formFileMultipleNIC" class="form-label">Image Of NIC</label>
+        <input class="form-control" type="file" id="formFileMultipleNIC" multiple>
+      </div>
+      <div class="col-6">
+        <label for="inputDrivingLicense" class="form-label">Driving License</label>
+        <input type="text" class="form-control" id="inputDrivingLicense">
+      </div>
+      <div class="col-md-6">
+        <label for="formFileMultipleDL" class="form-label">Image Of Driving License</label>
+        <input class="form-control" type="file" id="formFileMultipleDL" multiple>
+      </div>
+      <div class="col-md-6">
+        <label for="inputUsername" class="form-label">Username</label>
+        <input type="text" class="form-control" id="inputUsername">
+      </div>
+      <div class="col-md-6">
+        <label class="form-label" for="inputPassword"> Password</label>
+        <input class="form-control" id="inputPassword" type="password" aria-describedby="pwHelp">
+      </div>
+
+      <div class="row mt-2">
+        <div class="col-8">
+        <label class="col-6 fs-5" style="height: max-content; width: max-content;">Change Password</label>
+        </div>
+        <div class="col-4 ">
+          <button class="btn btn-dark me-2" type="button">Update Info </button>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <label class="form-label" for="inputNPassword">New Password</label>
+        <input class="form-control" id="inputNPassword" type="password" aria-describedby="pwHelp">
+        <div id="pwHelp" class="form-text">Use 8 or more characters with a mix of letters, numbers & symbols</div>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-dark mt-5" type="button">Reset Password</button>
+      </div>
+      <div class="row mt-2 justify-content-end">
+      <div class="col-5 bg-light align-items-end">
+        <button class="btn me-0 btn-dark" type="button">Delete Account</button>
+      </div>
+      <div class="col-4 ">
+        <button class="btn btn-dark" type="button">LogOut</button>
+      </div>
+      </div>
+    </form>
+
+
 
   </div>
   <!-------------------------------------------->
