car htim pages to useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
@@ -159,22 +159,22 @@
   </div>
 
   <div class="container">
-    <h2 class="text-center mt-4 mb-5" style="color: white">Our Fleet</h2>
-    <div class="row" id="row" style="height: 235px">
-      <div class="box mt-5">
-        <img src="assests/images/general_cars.jpg">
+    <h2 class="text-center mt-4" style="color: white">Our Fleet</h2>
+    <div class="row" id="row" style="height: 260px">
+      <div class="box mt-0">
+        <a href="generalCars.html"><img src="assests/images/general_cars.jpg"></a>
         <div class="content">
           <h2>General Cars<br> <span>We have 30 cars <br>to rent in <br>general car category</span></h2>
         </div>
       </div>
-      <div class="box mt-5">
-        <img src="assests/images/premium_cars.jpg">
+      <div class="box mt-0 ">
+        <a href="premiumCars.html"><img src="assests/images/premium_cars.jpg"></a>
         <div class="content">
           <h2>Premium Cars <br> <span>We have 14 cars <br> to rent in <br> premium car category</span></h2>
         </div>
       </div>
-      <div class="box mt-5">
-        <img src="assests/images/luxury_Carls.jpg">
+      <div class="box mt-0">
+        <a href="luxuryCars.html"><img src="assests/images/luxury_Carls.jpg"></a>
         <div class="content">
           <h2>Luxury Cars <br> <span>We have 30 cars <br> to rent in <br> luxury car category</span></h2>
         </div>
@@ -272,7 +272,6 @@
             </div>
             <div class="col-md-4">
               <label for="inputDriverContactNo" class="form-label">Driver Contact No</label>
-              <a href=""></a>
               <input type="text" class="form-control" id="inputDriverContactNo" readonly>
             </div>
           </form>
